tests/baselines/reference/recursiveGetterAccess(strict=true).errors.txt
recursiveGetterAccess.ts(2,5): error TS7023: 'testProp' implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.


==== recursiveGetterAccess.ts (1 errors) ====
    class MyClass {
    get testProp() { return this.testProp; }
        ~~~~~~~~
!!! error TS7023: 'testProp' implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.
    }
     
    